hello-kubernetes-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hello-kubernetes-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: "hw1.alainkaeslin.com"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              serviceName: hello-kubernetes-first
              servicePort: 80
    - host: "hw2.alainkaeslin.com"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              serviceName: hello-kubernetes-second
              servicePort: 80
